--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
                     <div class="col-lg-7" data-aos="fade-right">
                         <img src="My Post (12).png" class="w-100" alt="">
                     </div>
-                    <div class="col-lg-5 job-capt" data-aos="fade-left">
-                        <h2>Job Desk!</h2>
-                        <p class="lead mb-4">
-                            Layanan Design Grafis
-                        </p>
-                        <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                    <div class="col-lg-5 job-capt">
+                        <div data-aos="fade-up">
+                            <h2>Job Desk!</h2>
+                            <p class="lead mb-4">
+                                Layanan Design Grafis
+                            </p>
+                            <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -167,8 +169,8 @@
                             <img class="img-fluid" src="vaksin.jpg" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-6" data-aos="fade-left">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="#!" data-aos="fade-right">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">PPT </div>
@@ -189,8 +191,8 @@
                             <img class="img-fluid" src="satatistik-nasional.jpg" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-6" data-aos="fade-left">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-6" style="z-index: 2;">
+                        <a class="portfolio-item" href="#!" data-aos="fade-right">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Logo Design</div>
@@ -331,3 +333,4 @@
           </script>
     </body>
 </html>
+
